--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -4,12 +4,15 @@
     <title>FM-World News</title>
     <meta name="viewport" content="width = device-width, initial-scale = 1, user-scalable = no" />
     <script type="text/javascript" charset="utf-8" src="cordova-1.9.0.js"></script>
-	<link rel="stylesheet" href="css/fmworld.css" />
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.css" />
-<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-<script src="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.js"></script>    <script type="text/javascript" src="js/fmworld_rss.js"></script>
+	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.js"></script>    
+	<script type="text/javascript" src="js/fmworld_rss.js"></script>
 	<script type="text/javascript" src="js/jquery.jfeed.js"></script>
  
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.css" />
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.1/jquery.mobile.structure-1.1.1.min.css" />
+	<link rel="stylesheet" href="css/fmworld.css" />
+
 </head>
 <body onload="init()">
 <!-- begin first page -->
